# taskforge

./: .gitignore  README.md  pyproject.toml  taskforge.db
app/: db.py  deps.py  domain.py  main.py
app/audit/: models.py  repository.py  service.py
app/projects/: models.py  repository.py  router.py  schemas.py  service.py
app/tasks/: models.py  repository.py  router.py  schemas.py  service.py
app/users/: models.py  repository.py  router.py  schemas.py  service.py
docs/: app_router.md  app_structure.md  service_methods.md
tests/: conftest.py  test_main.py  test_projects_service.py  test_tasks_service.py
